[package]
name = "async-rust-benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }
futures = "0.3.31"
pin-project-lite = "0.2"

[dev-dependencies]
tabled = "0.20"

[[bench]]
name = "01"
harness = false
